--- a/README
+++ b/README
@@ -1,2 +1,36 @@
 humanizer
-Python script that simulates human-like typing. Uses machine learning and other algorithms to provide authentic, humanlike typing.
+Python script that simulates human-like typing. Uses machine learning and other advanced algorithms to provide authentic, humanlike typing.
+
+Setup Instructions
+
+1. Dependencies
+   - Python 3.x
+   - Required Python packages (pip install):
+     - pyautogui
+     - numpy
+     - tqdm
+     - scikit-learn
+
+2. Installation
+   - Clone the repository or download the script directly.
+
+3. Configuration
+   - Ensure all required dependencies are installed.
+   - Set up the Python environment with necessary packages.
+
+4. Typing Profiles
+   - Edit typing_profiles.json to customize typing styles (slow, average, fast):
+     ```
+     {
+       "slow": {"delay_range": [0.15, 0.4], "typo_probability": 0.15},
+       "average": {"delay_range": [0.05, 0.2], "typo_probability": 0.05},
+       "fast": {"delay_range": [0.01, 0.1], "typo_probability": 0.02}
+     }
+     ```
+
+ Usage
+- Run the script by executing python humanizer.py.
+- Follow the prompts to select a typing style (slow, average, fast).
+- Input the text to be typed when prompted (END on a new line to finish).
+- The script will simulate typing the input text with variations in typing speed and potential typos.
+- Upon completion, it will display typing statistics including time taken, words per minute (WPM), number of typos, and error rate.
